--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,7 @@
 platform = ststm32
 board = nucleo_g431kb
 framework = arduino
+lib_deps =
+    https://github.com/stm32duino/VL53L5CX.git
+    https://github.com/stm32duino/STM32FreeRTOS.git
+    Wire
