--- a/platformio.ini
+++ b/platformio.ini
@@ -12,6 +12,8 @@
 platform = ststm32
 board = nucleo_g431kb
 framework = arduino
+monitor_speed = 115200
+monitor_filters = direct
 lib_deps =
     https://github.com/stm32duino/VL53L5CX.git
     https://github.com/stm32duino/STM32FreeRTOS.git
